# hurrmes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.sh
hurrmes/: __init__.py  __main__.py  cli.py  client.py  config.py  dashboard.py  theme.py
tests/: __init__.py  test_client.py  test_config.py  test_dashboard.py  test_main.py  test_theme.py
