[project]
name = "hurrmes"
version = "0.1.0"
description = "A custom TUI client for the Hermes Agent API Server"
authors = [{ name = "Magnus Hedemark" }]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "prompt-toolkit>=3.0.50",
    "httpx>=0.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
hurrmes = "hurrmes.__main__:main"

[tool.setuptools.packages.find]
include = ["hurrmes*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
    "N",    # pep8-naming (naming conventions)
    "UP",   # pyupgrade (modern Python idioms)
    "C4",   # comprehensions
    "B",    # flake8-bugbear (bug detection)
    "SIM",  # flake8-simplify (simplifications)
    "ARG",  # flake8-unused-arguments
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
